--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./style.css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
@@ -119,7 +119,124 @@
             </div>
         </div>
     </div>
-        <h1>Ghbdtn</h1>
+    </section>
+    <section class="promo">
+            <h2 class="promo_title"><strong>Companies I've had worked</strong></h2>
+        <div class="promo_item">
+            <div class="promo_item_img">
+                <img src="./img/cachet.svg" alt="logo"/>
+            </div>
+            <div class="promo_item_img">
+                <img class="promo_item_img_effect" src="./img/guitar-center.svg" alt="logo"/>
+            </div>
+            <div class="promo_item_img">
+                <img class="promo_item_img_effect" src="./img/tokico.svg" alt="logo"/>
+            </div>
+            <div class="promo_item_img">
+                <img class="promo_item_img_effect" src="./img/profil-rejser.svg" alt="logo"/>
+            </div>
+            <div class="promo_item_img">
+                <img class="promo_item_img_effect" src="./img/shopify.svg" alt="logo"/>
+            </div>
+        </div>
+    </section>
+    <section class="service">
+       <div class="services">
+        <div class="services_top">
+            <div class="services_top_icon">
+                <img src="./img/handshake-man-woman-after-signing-business-contract-closeup.jpg"/>
+            </div>
+            <p><strong>Services</strong></p>
+        </div>
+        <div class="services_main">
+            <div class="services_main_box">
+                <div class="services_main_title">
+                    <div class="services_main_title_desc">
+                        <h3>Websites</h3>
+                        <hr>
+                        <p>You may want to explore Too CSS for great collection <br/> of free HTML CSS templates.</p>
+                    </div>
+                    <div class="services_main_title_btn">
+                        <p>$2.400</p>
+                    </div>
+                    <div class="services_main_title_link">
+                        <a href="#">Discover More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="services_main_img">
+                <div class="services_main_img_main">
+                    <img src="./img/icon/free-icon-font-globe-3917538.png">
+                </div>
+            </div>
+        </div>
+        <div class="services_main">
+            <div class="services_main_box">
+                <div class="services_main_title">
+                    <div class="services_main_title_desc">
+                        <h3>Websites</h3>
+                        <hr>
+                        <p>You may want to explore Too CSS for great collection <br/> of free HTML CSS templates.</p>
+                    </div>
+                    <div class="services_main_title_btn">
+                        <p>$2.400</p>
+                    </div>
+                    <div class="services_main_title_link">
+                        <a href="#">Discover More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="services_main_img">
+                <div class="services_main_img_main">
+                    <img src="./img/icon/free-icon-font-globe-3917538.png">
+                </div>
+            </div>
+        </div>
+        <div class="services_main">
+            <div class="services_main_box">
+                <div class="services_main_title">
+                    <div class="services_main_title_desc">
+                        <h3>Websites</h3>
+                        <hr>
+                        <p>You may want to explore Too CSS for great collection <br/> of free HTML CSS templates.</p>
+                    </div>
+                    <div class="services_main_title_btn">
+                        <p>$2.400</p>
+                    </div>
+                    <div class="services_main_title_link">
+                        <a href="#">Discover More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="services_main_img">
+                <div class="services_main_img_main">
+                    <img src="./img/icon/free-icon-font-globe-3917538.png">
+                </div>
+            </div>
+        </div>
+        <div class="services_main">
+            <div class="services_main_box">
+                <div class="services_main_title">
+                    <div class="services_main_title_desc">
+                        <h3>Websites</h3>
+                        <hr>
+                        <p>You may want to explore Too CSS for great collection <br/> of free HTML CSS templates.</p>
+                    </div>
+                    <div class="services_main_title_btn">
+                        <p>$2.400</p>
+                    </div>
+                    <div class="services_main_title_link">
+                        <a href="#">Discover More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="services_main_img">
+                <div class="services_main_img_main">
+                    <img src="./img/icon/free-icon-font-globe-3917538.png">
+                </div>
+            </div>
+        </div>
+    </div>  
     </section>
 </body>
 </html>
